Update and rename Index.htm to index.htm

--- a/index.htm
+++ b/index.htm
@@ -8,5 +8,12 @@
       <tr>
         <td colspan="2">Picture</td>
       </tr>
+      <tr>
+        <td>
+          Home<br>
+          Menu 1<br>
+          Menu 2<br>
+        </td>
+      </tr>
   </body>
 </html>
