--- a/index.htm
+++ b/index.htm
@@ -4,16 +4,17 @@
     <title>Neple's World!</title>
   </head>
   <body>
-    <table>
+    <table border="1">
       <tr>
-        <td colspan="2">Picture</td>
+        <td colspan="2" width="600" height="200">Picture</td>
       </tr>
       <tr>
-        <td>
+        <td width="100" height="600">
           Home<br>
           Menu 1<br>
           Menu 2<br>
         </td>
+        <td width="500" height="600">Home!</td>
       </tr>
   </body>
 </html>
