--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <table border="1">
       <tr>
-        <td colspan="2" width="600" height="200">Picture</td>
+        <td colspan="2" width="600" height="200"><img src="logo.jpg"></td>
       </tr>
       <tr>
         <td width="100" height="600">
