--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <td colspan="2" width="600" height="200"><img src="logo.jpg"></td>
       </tr>
       <tr>
-        <td width="100" height="600">
-          Home<br>
-          Menu 1<br>
+        <td width="100" height="600" align="center">
+          Home<br><br>
+          Menu 1<br><br>
           Menu 2<br>
         </td>
         <td width="500" height="600">Home!</td>
