--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,9 @@
       </tr>
       <tr>
         <td width="100" height="600" align="center">
-          Home<br><br>
-          Menu 1<br><br>
-          Menu 2<br>
+          <a href="index.htm">Home</a><br><br>
+          <a href="dev.htm">Development</a><br><br>
+          <a href="mus.htm">Music</a><br>
         </td>
         <td width="500" height="600">Home!</td>
       </tr>
