--- a/dev.htm
+++ b/dev.htm
@@ -14,7 +14,11 @@
           <a href="dev.htm">Development</a><br><br>
           <a href="mus.htm">Music</a><br>
         </td>
-        <td width="500" height="600">Home!</td>
+        <td width="500" height="600" valign="up">
+          <h1 align="center">Development!</h1>
+          <h3>- Craft Create</h3>
+          <p>The Crafting Sandbox Game</p>
+        </td>
       </tr>
   </body>
 </html>
