--- a/mus.htm
+++ b/mus.htm
@@ -14,7 +14,13 @@
           <a href="dev.htm">Development</a><br><br>
           <a href="mus.htm">Music</a><br>
         </td>
-        <td width="500" height="600">Home!</td>
+        <td width="500" height="600" valign="up">
+          <h1 align="center">Music!</h1>
+          <a href="https://www.youtube.com/watch?v=syxSOUcd7L0&list=PLUyoeuc5RCcwJa-EwrhfXW_jKiWhaYtgt"><h3>Enthusiasm EP</h3></a>
+          <a href="https://www.youtube.com/watch?v=biitI4WFgng&list=PLUyoeuc5RCcw7HsttYWgfQtupaYEMoFPw"><h3>Hyper EP</h3></a>
+          <a href="https://www.youtube.com/watch?v=goi5qIr-SKo"><h3>Indestructible</h3></a>
+          <a href="https://www.youtube.com/watch?v=8drJDit9OEE"><h3>Starburst</h3></a>
+        </td>
       </tr>
   </body>
 </html>
