--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
           <a href="dev.htm">Development</a><br><br>
           <a href="mus.htm">Music</a><br>
         </td>
-        <td width="500" height="600">Home!</td>
+        <td width="500" height="600" valign="up"><h1 align="center">Home!</h1></td>
       </tr>
   </body>
 </html>
