--- a/dev.htm
+++ b/dev.htm
@@ -14,7 +14,7 @@
           <a href="dev.htm">Development</a><br><br>
           <a href="mus.htm">Music</a><br>
         </td>
-        <td width="500" height="600" valign="up">
+        <td width="500" height="600" valign="top">
           <h1 align="center">Development!</h1>
           <h3>- Craft Create</h3>
           <p>The Crafting Sandbox Game</p>
